--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="Student">Student</string>
     <string name="Studentenliste">Studentenliste</string>
     <string name="notenliste">Notenliste</string>
+    <string name="Studentsenliste">Studentenliste</string>
 </resources>
