--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="notenliste">Notenliste</string>
     <string name="Studentsenliste">Studentenliste</string>
     <string name="pick_date">Geburtsdatum Wählen</string>
+    <string name="importer">Importer</string>
 </resources>
